--- a/CSS/main.css
+++ b/CSS/main.css
@@ -12,6 +12,16 @@ nav li{
 }
 nav ul li a{
 	color:white;
+	text-decoration: none;
+}
+nav ul li a:hover{
+	color:white;
+}
+h4 a{
+	color:black;
+}
+h4 a:hover{
+	color:black;
 }
 .Kittpad{
 	padding-left: 5px;
@@ -39,7 +49,7 @@ nav ul li a{
 }
 .SearchBar{
 	padding-left: 30px;
-	padding: none;
+	padding-right: -10px;
 }
 nav li select{
 	outline:none;
@@ -49,7 +59,7 @@ nav li select{
 	font-weight: bold;
 }
 .SearchBar input{
-    height: 25px;
+    height: 30px;
     width: 500px;
 }
 .Perfil{
@@ -65,7 +75,10 @@ nav li select{
 	background-color: white;
 	color:black;
 }
-.button{
-	width:22px;
-	height:22px;
+#button{
+	width:28px;
+	height:28px;
+	background: white;
+	padding-left: -10px;
+
 }
