--- a/CSS/main.css
+++ b/CSS/main.css
@@ -14,14 +14,35 @@ nav ul li a{
 	color:white;
 	text-decoration: none;
 }
+div h2 a{
+	color:black;
+	padding-left:100px;
+	text-decoration: none;
+
+}
 nav ul li a:hover{
 	color:white;
 }
-h4 a{
+div h2 a:hover{
 	color:black;
 }
-h4 a:hover{
-	color:black;
+h3{
+	color:grey;
+	padding-left: 100px;
+
+}
+nav li select{
+	outline:none;
+	border:none;
+	background-color: orange;
+	color:white;
+	font-weight: bold;
+}
+input[name="slider-select-element"]{
+	display:none;
+}
+.fluid-container{
+	height:500px;
 }
 .Kittpad{
 	padding-left: 5px;
@@ -51,13 +72,6 @@ h4 a:hover{
 	padding-left: 30px;
 	padding-right: -10px;
 }
-nav li select{
-	outline:none;
-	border:none;
-	background-color: orange;
-	color:white;
-	font-weight: bold;
-}
 .SearchBar input{
     height: 30px;
     width: 500px;
@@ -74,6 +88,7 @@ nav li select{
 #category{
 	background-color: white;
 	color:black;
+	vertical-align: middle;
 }
 #button{
 	width:28px;
@@ -81,4 +96,99 @@ nav li select{
 	background: white;
 	padding-left: -10px;
 
+}
+#slider-arrows{
+	margin:-10% auto 0 auto;
+	width:100%;
+}
+#slider-box{
+	  height: 50%;
+    width: 100%;
+}
+#slider-container {
+    height: 20%;
+    margin: 0 auto;
+    overflow: hidden;
+    text-align: left;
+    width: 60%;
+}
+.element-blue,
+.element-green,
+.element-red {
+    min-height: 300px;
+    max-height: 80%;
+    width: 100%;
+}
+.element-blue {
+    background: blue;
+}
+.element-green {
+    background: green;
+}
+.element-red {
+    background: red;
+}
+.slider-element {
+    float: left;
+    width: 33.333%;
+}
+#element1:checked ~ #slider-arrows label:nth-child(2),
+#element2:checked ~ #slider-arrows label:nth-child(3),
+#element3:checked ~ #slider-arrows label:nth-child(1) {
+    display: block;
+    float: right;
+}
+#element1:checked ~ #slider-arrows label:nth-child(3),
+#element2:checked ~ #slider-arrows label:nth-child(1),
+#element3:checked ~ #slider-arrows label:nth-child(2) {
+    display: block;
+    float: left;
+}
+#element1:checked ~ #slider-arrows label:nth-child(2):before,
+#element2:checked ~ #slider-arrows label:nth-child(3):before,
+#element3:checked ~ #slider-arrows label:nth-child(1):before {
+    color: black  ;
+    content: "\f054";
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-font-smoothing: antialiased;
+}
+#element1:checked ~ #slider-arrows label:nth-child(3):before,
+#element2:checked ~ #slider-arrows label:nth-child(1):before,
+#element3:checked ~ #slider-arrows label:nth-child(2):before {
+    color: black  ;
+    content: "\f053";
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-font-smoothing: antialiased;
+}
+#element1:checked ~ #slider-container #slider-box {
+    margin-left: 0;
+}
+#element2:checked ~ #slider-container #slider-box {
+    margin-left: -100%;
+}
+#element3:checked ~ #slider-container #slider-box {
+    margin-left: -200%;
+}
+#slider-arrows label {
+    color: transparent;
+    cursor: pointer;
+    display: none;
+    font-size: 2rem;
+    height: 20px;
+    width: 20px;
+}
+#slider-box {
+    -webkit-transition: all 0.75s ease;
+    -moz-transition: all 0.75s ease;
+    -ms-transition: all 0.75s ease;
+    -o-transition: all 0.75s ease;
+    transition: all 0.75s ease;
 }
