--- a/CSS/main.css
+++ b/CSS/main.css
@@ -18,6 +18,7 @@ div h2 a{
 	color:black;
 	padding-left:100px;
 	text-decoration: none;
+	line-height: 0%;
 
 }
 nav ul li a:hover{
@@ -29,6 +30,7 @@ div h2 a:hover{
 h3{
 	color:grey;
 	padding-left: 100px;
+	line-height: 0%;
 
 }
 nav li select{
@@ -37,9 +39,6 @@ nav li select{
 	background-color: orange;
 	color:white;
 	font-weight: bold;
-}
-input[name="slider-select-element"]{
-	display:none;
 }
 .fluid-container{
 	height:500px;
@@ -83,7 +82,9 @@ input[name="slider-select-element"]{
 	width:22px;
 	height:22px;
 	background-color: white;
-	padding-left: 0;
+	position:relative;
+	top:10px;
+
 }
 #category{
 	background-color: white;
@@ -94,101 +95,18 @@ input[name="slider-select-element"]{
 	width:28px;
 	height:28px;
 	background: white;
-	padding-left: -10px;
-
+	border: none;
 }
-#slider-arrows{
-	margin:-10% auto 0 auto;
-	width:100%;
+.slider {
+  width: 1000px;
+  height: 300px;
+  overflow-x: scroll;
 }
-#slider-box{
-	  height: 50%;
-    width: 100%;
+.slide {
+  float: left;
+  width: 300px;
+  height: 300px;
 }
-#slider-container {
-    height: 20%;
-    margin: 0 auto;
-    overflow: hidden;
-    text-align: left;
-    width: 60%;
-}
-.element-blue,
-.element-green,
-.element-red {
-    min-height: 300px;
-    max-height: 80%;
-    width: 100%;
-}
-.element-blue {
-    background: blue;
-}
-.element-green {
-    background: green;
-}
-.element-red {
-    background: red;
-}
-.slider-element {
-    float: left;
-    width: 33.333%;
-}
-#element1:checked ~ #slider-arrows label:nth-child(2),
-#element2:checked ~ #slider-arrows label:nth-child(3),
-#element3:checked ~ #slider-arrows label:nth-child(1) {
-    display: block;
-    float: right;
-}
-#element1:checked ~ #slider-arrows label:nth-child(3),
-#element2:checked ~ #slider-arrows label:nth-child(1),
-#element3:checked ~ #slider-arrows label:nth-child(2) {
-    display: block;
-    float: left;
-}
-#element1:checked ~ #slider-arrows label:nth-child(2):before,
-#element2:checked ~ #slider-arrows label:nth-child(3):before,
-#element3:checked ~ #slider-arrows label:nth-child(1):before {
-    color: black  ;
-    content: "\f054";
-    font-family: FontAwesome;
-    font-style: normal;
-    font-weight: normal;
-    line-height: 1;
-    -webkit-font-smoothing: antialiased;
-    -moz-font-smoothing: antialiased;
-}
-#element1:checked ~ #slider-arrows label:nth-child(3):before,
-#element2:checked ~ #slider-arrows label:nth-child(1):before,
-#element3:checked ~ #slider-arrows label:nth-child(2):before {
-    color: black  ;
-    content: "\f053";
-    font-family: FontAwesome;
-    font-style: normal;
-    font-weight: normal;
-    line-height: 1;
-    -webkit-font-smoothing: antialiased;
-    -moz-font-smoothing: antialiased;
-}
-#element1:checked ~ #slider-container #slider-box {
-    margin-left: 0;
-}
-#element2:checked ~ #slider-container #slider-box {
-    margin-left: -100%;
-}
-#element3:checked ~ #slider-container #slider-box {
-    margin-left: -200%;
-}
-#slider-arrows label {
-    color: transparent;
-    cursor: pointer;
-    display: none;
-    font-size: 2rem;
-    height: 20px;
-    width: 20px;
-}
-#slider-box {
-    -webkit-transition: all 0.75s ease;
-    -moz-transition: all 0.75s ease;
-    -ms-transition: all 0.75s ease;
-    -o-transition: all 0.75s ease;
-    transition: all 0.75s ease;
+.holder {
+  width: 1000%;
 }
