--- a/CSS/main.css
+++ b/CSS/main.css
@@ -55,7 +55,7 @@ nav li select{
 }
 .comunidad{
 	padding-left: 30px;
-	width:160px;
+	width:170px;
 }
 
 .wrapper{
@@ -101,6 +101,7 @@ nav li select{
   width: 1000px;
   height: 250px;
   overflow-x: scroll;
+  overflow-y:hidden;
 }
 .slide {
   float: left;
@@ -109,4 +110,118 @@ nav li select{
 }
 .holder {
   width: 1000%;
+}
+.col-1,
+.col-sm-1,
+.col-md-1,
+.col-lg-1,
+.col-xl-1 {
+	width: 8.333333%;
+	padding: .33%;	
+ } 
+.col-2,
+.col-sm-2,
+.col-md-2,
+.col-lg-2,
+.col-xl-2 {
+	width: 16.666666%;
+	padding: .33%;
+ } 
+.col-3
+.col-sm-3,
+.col-md-3,
+.col-lg-3,
+.col-xl-3 {
+	width: 24.999999%;
+	padding: .33%;
+	min-height: 10px;
+ } 
+.col-4,
+.col-sm-4,
+.col-md-4,
+.col-lg-4,
+.col-xl-4 {
+	width: 33.333333%;
+	padding: .33%;
+ } 
+.col-5,
+.col-sm-5,
+.col-md-5,
+.col-lg-5,
+.col-xl-5 {
+	width: 41.666666%;
+	padding: .33%;
+ } 
+.col-6,
+.col-sm-6,
+.col-md-6,
+.col-lg-6,
+.col-xl-6 {
+	width: 50%;
+	padding: .33%;
+ } 
+.col-7,
+.col-sm-7,
+.col-md-7,
+.col-lg-7,
+.col-xl-7 {
+	width: 58.333333%;
+	padding: .33%;
+ } 
+.col-8,
+.col-sm-8,
+.col-md-8,
+.col-lg-8,
+.col-xl-8 {
+	width: 66.666666%;
+	padding: .33%;
+ } 
+.col-9,
+.col-sm-9,
+.col-md-9,
+.col-lg-9,
+.col-xl-9 {
+	width: 75%;
+	padding: .33%;
+ } 
+.col-10,
+.col-sm-10,
+.col-md-10,
+.col-lg-10,
+.col-xl-10 {
+	width: 83.333333%;
+	padding: .33%;
+ } 
+.col-11
+.col-sm-11,
+.col-md-11,
+.col-lg-11,
+.col-xl-11 {
+	width: 91.666666%;
+	padding: .33%;
+ } 
+.col-12,
+.col-sm-12,
+.col-md-12,
+.col-lg-12,
+.col-xl-12 {
+	width: 100%;
+	padding: .33%;
+ } 
+ 
+ @media only screen and (max-width: 576px)
+ {
+
+ }
+@media only screen and (min-width: 576px) and (max-width: 768px)
+{
+
+}
+@media only screen and (min-width: 768px) and (max-width: 992px)
+{
+
+}
+@media only screen and (min-width: 992px)
+{
+
 }
